# houserat

./: Cargo.toml  README.md  config.example.toml  config.toml.example  houserat.service
.github/workflows/: ci.yml  publish.yml
src/: config.rs  error.rs  hysteresis.rs  mac_address.rs  main.rs  metadata.rs  network.rs  telegram.rs
