[package]
name = "houserat"
description = "Notifies when known devices connect to the network"
version = "0.2.0"
authors = ["Dror Levin <spatz@psybear.com>"]
edition = "2018"
repository = "https://github.com/drrlvn/houserat/"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
chrono = "0.4.7"
etherparse = "0.8.2"
humantime-serde = "0.1.1"
lazy_static = "1.3.0"
pcap = "0.7.0"
reqwest = "0.9.20"
serde = { version = "1.0.99", features = ["derive"] }
snafu = "0.5.0"
structopt = "0.3.0"
toml = "0.5.3"
url = "1.7.2"

[profile.release]
lto = true
